<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Actualizar_Nota">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:hint="@string/Id_Nota"
                android:id="@+id/id_nota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="sans-serif-black"/>

            <TextView
                android:hint="@string/correo_usuario"
                android:id="@+id/correo_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="sans-serif-black"/>

            <TextView
                android:hint="@string/fecha_horaactual"
                android:id="@+id/fecha_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="sans-serif-black"/>

            <EditText
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/kanitbold"/>

            <EditText
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Descripcion"
                android:textStyle="bold"
                android:fontFamily="@font/kanitbold"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                android:minHeight="150dp"
                android:gravity="start"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Calendario"
                    android:id="@+id/calender"
                    app:icon = "@drawable/ic_calendar"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Fecha"
                    android:id="@+id/date"
                    android:textSize="20dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif-condensed-medium"/>



            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/result"
                android:hint="@string/Estado"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/kanitbold"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>