<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/crearCuentaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kanitbold"
            android:textSize="25sp"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="registro.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/NombreEt"
                android:hint="@string/nombreEt"
                android:fontFamily="@font/kanitbold"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawableStart="@drawable/ic_nombres"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/CorreoeEt"
                android:hint="@string/CorreoEt"
                android:fontFamily="@font/kanitbold"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:drawableStart="@drawable/ic_correo"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     app:passwordToggleEnabled="true"
                     app:hintEnabled="false">

                     <EditText
                         android:id="@+id/ContraseñaEt"
                         android:hint="@string/ContraseñaEt"
                         android:fontFamily="@font/kanitbold"
                         android:inputType="textPassword"
                         android:padding="20dp"
                         android:drawableStart="@drawable/ic_password"
                         android:drawablePadding="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>

                 </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/CofirmarContraseñaEt"
                    android:hint="@string/ConfirmarContraseñaEt"
                    android:fontFamily="@font/kanitbold"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/RegistrarUsuario"
            android:text="@string/RegistrarUsuario"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/kanitbold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tengounaCuentaTxt"
            android:text="@string/tengounaCuentaTxt"
            android:fontFamily="@font/kanitbold"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>